--- a/collab-system-be/package.json
+++ b/collab-system-be/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
+    "quill-delta": "^5.1.0",
     "socket.io": "^4.8.1"
   }
 }
